--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,4 +1,4 @@
-<ul class="thumbnails">
+<ul class="thumbnails" id="post-index">
 	<% @posts.each do |post| %>
 	<% if post.status == 0 %>
 	<li>
@@ -6,11 +6,11 @@
 		<div class="thumbnail">
 			<% if post.present? && post.has_image? %>
 			<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
-			<h5><%= truncate(post.title, :length => 22) %></h5>
+			<h5><%= truncate(post.title, :length => 20) %></h5>
 			<h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			<% else %>
 			<%= image_tag "placeholder-thumbnail.gif", :alt => "missing image" %>
-			<h5><%= truncate(post.title, :length => 22) %></h5>
+			<h5><%= truncate(post.title, :length => 20) %></h5>
 			<h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			<% end %> 
 			<% end %>    
