added tag support and tag filtering

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -81,11 +81,11 @@ body > #container { height: auto; min-height: 100%; }
 //   border: none;
 //   box-shadow: none;
 // }
-#post-images .thumbnails {
+#post_images .thumbnails {
   padding-top: 20px;
 }
 
-#post-images .thumbnails img{
+#post_images .thumbnails img{
   padding: 0;
   border: 9px solid #fff;
   box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.355);
