--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,13 +4,17 @@
   <%= f.select :adtype, options_for_select(Post.listing_types, @post.adtype), :include_blank => 'Select Ad Type', :required => true %><br />
  	
  	<%= f.collection_select :category_id, @categories, :id, :name, :include_blank => 'Select Category' %><br />
- 	
- 	<%= f.text_field :title, :class => 'input-xxlarge', :placeholder => 'Title' %><br />
- 	<%= f.select :currency, options_for_select(Post.currency_types, @post.currency), :required => true %>
+ 	Title<br>
+ 	<%= f.text_field :title, :class => 'input-xxlarge' %><br />
+ 	Price (e.g. 400.00)<br>
 
- 	<%= f.number_field :price, :class => 'input-medium', :placeholder => 'Price, e.g. 400.00' %><br />
+ 	<%= f.number_field :price, :class => 'input-medium' %> <%= f.select :currency, options_for_select(Post.currency_types, @post.currency), :required => true %><br />
+Description<br>
+ 	<%= f.text_area :description, :rows => '10', :class => 'input-xxlarge' %><br />
+Tags (separated by commas)<br>
+ 	<%= f.text_field :tag_list, :class => 'input-xxlarge' %><br />
 
- 	<%= f.text_area :description, :rows => '10', :class => 'input-xxlarge', :placeholder => 'Description' %><br />
+
  	<%= f.submit 'Continue', :class => 'btn btn-primary'%> <%= link_to "Cancel", root_url %> 
 <% end %>
 
