--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,1 @@
-<div class="container">
-	
-	<div id="posts"><%= render "posts" %>
-	
-
-	</div>
-
-
-
-	
-
-</div>
+<div id="posts"><%= render "posts" %></div>
