--- a/app/views/images/_post_images.html.erb
+++ b/app/views/images/_post_images.html.erb
@@ -1,5 +1,5 @@
-<div class="row-fluid">
-	<div class="container">
+<div class="row-fluid" id="post_images">
+	
 	  <ul class="thumbnails">
 	    <% @post.images.sort.each do |pic| %>
 	     <li><%= image_tag pic.image_file.url(:thumb).to_s %>	
@@ -8,5 +8,5 @@
 				</li>
 	    <% end %>
 	  </ul>
-	</div>
+	
 </div>	
