--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
   	<div class="navbar navbar-fixed-top">
   		<div class="container">
   			<div class="navbar-inner">
-  				<a class="brand" href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
+  				<div class="brand">
+  					<a href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
+  					<h4>Buy and Sell Bikes and Parts!</h4>
+  				</div>	
 		    <!-- <ul class="nav">
 		      <li class="active"><a href="#">Forums</a></li>
 		      <li><a href="#">About</a></li>
@@ -31,30 +34,30 @@
 
 
 
-
-		    <% if params[:action] == 'index' && params[:controller] == 'posts' %>
-			    <%= form_tag posts_path, :class => "form-search", :method => 'get', remote: true, :id => "posts_search" do %>
-				    <%= text_field_tag :search, params[:search], :class => "input-medium" %>
-				    <%= submit_tag "Search", :name => nil, :class => "btn" %>
-			    <% end %>
-		    <% else %>
-			    <%= form_tag posts_path, :class => "form-search", :method => 'get', :id => "posts_search" do %>
-				    <%= text_field_tag :search, params[:search], :class => "input-medium" %>
-				    <%= submit_tag "Search", :name => nil, :class => "btn" %>
-			    <% end %>
-		    <% end %>
-		    
+		    <div class="main_search">
+		    	<% if params[:action] == 'index' && params[:controller] == 'posts' %>
+		    	<%= form_tag posts_path, :class => "form-search", :method => 'get', remote: true, :id => "posts_search" do %>
+		    	<%= text_field_tag :search, params[:search], :class => "input-xlarge" %>
+		    	<%= submit_tag "Search", :name => nil, :class => "btn" %>
+		    	<% end %>
+		    	<% else %>
+		    	<%= form_tag posts_path, :class => "form-search", :method => 'get', :id => "posts_search" do %>
+		    	<%= text_field_tag :search, params[:search], :class => "input-xlarge" %>
+		    	<%= submit_tag "Search", :name => nil, :class => "btn" %>
+		    	<% end %>
+		    	<% end %>
+		    </div>		    
 		    <div class="login-area">	
 		    	<% if current_user %>
 		    	<div class="user-status">Welcome <%= link_to current_user.fname, user_path(current_user) %></div>
-		    	<div class="btn-group">	
-		    		<button class="btn"><%= link_to "Post Ad", new_post_path %></button>
-		    		<button class="btn"><%= link_to "Log Out", logout_path(current_user) %></button>
+		    	<div class="login-links">	
+		    		<%= link_to "Post Ad", new_post_path %>
+		    		<%= link_to "Log Out", logout_path(current_user) %>
 		    		<% else %>
-		    		<div class="btn-group">
-		    			<button class="btn"><%= link_to "Post Ad", login_path %></button>
-		    			<button class="btn"><%= link_to "Login", login_path %></button>
-		    			<button class="btn"><%= link_to "Register", signup_path %></button>
+		    		<div class="login-links">
+		    			<%= link_to "Post Ad", login_path %>
+		    			<%= link_to "Login", login_path %>
+		    			<%= link_to "Register", signup_path %>
 		    			<% end %>	
 		    		</div>
 		    	</div>	
@@ -65,8 +68,10 @@
 		</div>
 
 
-		<div class="container">
-			<%= yield %>
+		<div class="content">
+			<div class="container">
+				<%= yield %>
+			</div>
 		</div>
 
 		<%= render 'posts/footer' %>
