--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,12 @@
-<ul class="breadcrumb">
+<!-- <ul class="breadcrumb">
   <li><a href="#">Home</a> <span class="divider">/</span></li>
   <li><a href="#">Library</a> <span class="divider">/</span></li>
   <li class="active">Data</li>
-</ul>
+</ul> -->
+
+<div class="span4">
+	<img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
+</div>
 
 <div class="span8">
 	<% if session[:user_id] == @post.user_id && @post.status == 0  %>
@@ -39,7 +43,7 @@
 
 	<div class="description">
 		<%= simple_format(@post.description) %>
-
+	</div>
 		<div class="row-fluid" id="post_images">
 			
 			  <ul class="thumbnails">
@@ -56,7 +60,7 @@
 			<% unless @post.tag_list.empty? %>
 				<p>Tags: <%= raw @post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></p>
 			<% end %>	
-	</div>
+	
 	<div class="comments">
 		<h3>Comments</h3>
 		<% @comments.each do |comment| %>
@@ -84,9 +88,7 @@
 	</div>
 </div>
 
-<div class="span4">
-	<img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
-</div>
+
 
 
 
