--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -46,3 +46,11 @@
 .login-area {
 	float: right;
 }
+
+.gravatar {
+	width: 50px;
+	background-color: #fff;
+	float: left;
+	margin-right: 10px;
+	margin-top: 6px;
+}	
