--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -66,6 +66,9 @@
 		<% @comments.each do |comment| %>
 			<ul>
 				<li>
+					<div class="gravatar">
+						<%= image_tag comment.user.gravatar_url, :default => "default_gravatar_64x64.gif" %>
+					</div>
 					<div class="author">
 						posted by <%= link_to comment.user.fname, user_path(comment.user_id) %> <%= time_ago_in_words(comment.created_at) %> ago
 						<% if check_time_since_post(comment) && correct_user(comment.user) %>
