--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 		<h2>Your Profile</h2><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn" %>
 	</div>
 	<div class="user-info">
+		<%= image_tag @user.gravatar_url, :default => "default_gravatar_64x64.gif", :class => 'gravatar' %>
 		Name: <%= @user.fname %><br />
 		Email address: <%= @user.email %><br />
 	</div>	
