css sticky footer to bottom

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -18,8 +18,9 @@ footer {
 	 clear: both;
 	 color: #666;
 	 position: relative;
+	 height: 281px;
+	 width: 100%;
 	 z-index: 10;
-	 height: auto;
 	 padding-bottom: 30px;
 	 padding-top: 30px;
 	 background-color: #2a2a2a;
