--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -15,11 +15,14 @@ body {
   background: url(gplaypattern.png);
 }
 
-html, body, .container { 
+html, body, { 
   height: 100%; 
 }
 
-body > #container { height: auto; min-height: 100%; }
+body > .container { 
+  height: auto; 
+  min-height: 100%;
+}
 
 /* @import "bootstrap-responsive"; */
 
@@ -27,15 +30,14 @@ h4 {
   clear: both;
 }
 
+
+
 .content {
   padding-top: 50px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  border: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 .navbar .brand {
