fix footer recent post image

--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -15,7 +15,7 @@
 				<% if Post.last.present? && Post.last.has_image? %>
 					<div class="footer-image">
 						<%= link_to post_path(Post.last) do %>
-					 		<%= image_tag Post.last.images.order('created_at DESC').first.image_file_url(:thumb).to_s %>
+					 		<%= image_tag Post.last.images.order('created_at DESC').last.image_file_url(:thumb).to_s %>
 							<div class="thumbnail_text"><%= truncate(Post.last.title, :length => 30) %></div>
 							<div class="thumbnail_text_price"><%= number_to_currency( Post.last.price, :unit => currency_type(Post.last.currency)) %></div>
 						<% end %>
