--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   				<div class="navbar-inner">
   				<div class="brand">
   					<a href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
-  					<h4>Buy and Sell Bikes and Parts!</h4>
+  					<h4>Buy and Sell Vintage Bikes and Parts!</h4>
   				</div>	
   				<div class="main_search">
   					<% if params[:action] == 'index' && params[:controller] == 'posts' %>
