--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,15 @@
-<div id="posts"><%= render "posts" %></div>
+<div class="listing_browser">
+	<h2>View </h2>
+
+	<form action="/posts" method="GET" id="sortfilter">
+		<!-- somehow passing in @category instance variable, and because the object is :category, rails figures this out and it shows the selected value -->
+		<%= collection_select :category, :id, @categories, :id, :name, :include_blank => 'All' %>
+		<!-- I pass in params[:adtype], and use that to show the selected value -->
+		<%= select_tag :adtype, options_for_select(@adtypes, params[:adtype]) %>
+		<input type="submit" value="Browse" class="btn">
+	</form>
+</div>
+
+<div id="posts">
+	<%= render "posts" %>
+</div>
