fix flash notices and form css

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -26,6 +26,10 @@ body > .container {
 
 /* @import "bootstrap-responsive"; */
 
+h2, h3 {
+  color: #000;
+}
+
 h4 {
   clear: both;
 }
@@ -237,3 +241,6 @@ h4 {
   font-size: 14px;
 }
 
+#upload-button {
+  display: inline;
+}
