--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,6 +25,6 @@
 	Tags (separated by commas)<br>
 	 	<%= f.text_field :tag_list, :class => 'input-xxlarge' %><br />
 
- 	<%= f.submit 'Continue', :class => 'btn btn-primary'%> <%= link_to "Cancel", root_url %> 
+ 	<%= f.submit 'Continue', :class => 'btn btn-primary'%> <%= link_to "Cancel", root_url, class: "btn" %> 
 <% end %>
 
