--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,17 +7,21 @@
 	padding-top: 10px;
 }
 
-.user-profile {
-	padding-bottom: 10px;
+.user-info .btn {
+	margin-top: 10px;
 }
 
 .user-profile h2{
 	display: inline;
 }
 
-.user-profile .btn{
-	margin-bottom: 10px;
-	margin-left: 10px;
+.user-profile {
+	margin-bottom: 5px;
+}
+
+.btn.btn-primary {
+	margin-right: 5px;
+	margin-bottom: 5px;
 }
 
 .sold {
@@ -50,7 +54,11 @@
 .gravatar {
 	width: 50px;
 	background-color: #fff;
+	display: block;
+}
+
+.comments .gravatar {
+	display: inline;
 	float: left;
 	margin-right: 10px;
-	margin-top: 6px;
-}	
+}
