--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/flash_messages", flash: flash %>
+
 <h3>Create a new post</h3>
 <div class="span4">
 	<img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
