--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,16 @@
 <% if target.errors.any? %>
 <div id="errorExplanation">
-  <h2><%= pluralize(target.errors.count, "error") %> prohibited this record from being saved:</h2>
-  <ul>
-  <% target.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-  </ul>
+  <div class="alert alert-error fade in">
+    <button class="close" data-dismiss="alert">×</button>
+    <h4>Oops, something went wrong. Please try again.</h4>
+		  <ul>
+		  <% target.errors.full_messages.each do |msg| %>
+		    <li><%= msg %></li>
+		  <% end %>
+		  </ul>
+  </div>
 </div>
 <% end %>
+
+
+
