put mailer vars into yaml ignore file and fix form css some more

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
-<h3>Create a new HeavyPeddler account</h3>
-
+<div class="span4">
+  <img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
+</div>
 <div class="span8">
+	<h3>Create a new HeavyPeddler account</h3>
 	<%= render "form" %>
 </div>
