--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,23 +1,15 @@
-<h1>Reset Password</h1>
+<div class="span4">
+  <img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
+</div>
 
-<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+<div class="span8">
+<h3>Create a new password</h3>
+  <%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
+    <%= render "shared/error_messages", :target => @user %>
+    
+    <%= f.password_field :password, :placeholder => "password" %>
+    <%= f.password_field :password_confirmation, :placeholder => "password confirmation" %>
+    <br />
+    <%= f.submit "Update Password", :class => "btn btn-primary" %></div>
   <% end %>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit "Update Password" %></div>
-<% end %>
+</div>
